--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>*--- Maquil Santos ---*</title>
   </head>
   <body>
@@ -13,13 +13,13 @@
       </span>
       <div class="div-apresentacao">
         <div class="logo">
-          <img src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/img/perfil.jpeg">
+          <img src="/img/perfil.jpeg">
           <h2>Sou Maquil Santos</h2>
           <p>Bancário, Estudante de Programação</p>
           <div class="redes-sociais">
-            <a href="https://api.whatsapp.com/send?phone=5534984151478" target="_blank"><img src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/img/whatsapp.png"></a>
-            <a href="https://www.facebook.com/maquil.goncalvesdossantos" target="_blank"><img src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/img/facebook.png"></a>
-            <a href="https://www.instagram.com/santssmaquil_/" target="_blank"><img src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/img/instagram.png"></a>
+            <a href="https://api.whatsapp.com/send?phone=5534984151478" target="_blank"><img src="/img/whatsapp.png"></a>
+            <a href="https://www.facebook.com/maquil.goncalvesdossantos" target="_blank"><img src="/img/facebook.png"></a>
+            <a href="https://www.instagram.com/santssmaquil_/" target="_blank"><img src="/img/instagram.png"></a>
           </div> 
 
           <div class="corpo-pagina">
@@ -103,8 +103,8 @@
             <p>No meu tempo livre, sempre gostei de jogar FPS, mas recentemente, descobri um jogo incrivel que junta futebol, e carros:</p>
             <p style="text-align: center; position: absolute; top: 28%; left: 35%;"><a href="https://www.rocketleague.com/pt-br/"><u>ROCKET LEAGUE</u></a>  ⚽🚘</p>
             <div class="secao3-imagens-esquerda">
-              <img src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/img/rocketleague.jpg">
-              <img src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/img/cs.jpg">
+              <img src="/img/rocketleague.jpg">
+              <img src="/img/cs.jpg">
             </div>
             <p style="top: 65%; left: 25%; position: absolute;">E você? Qual jogo gosta de jogar?</p>
             <input type="text" id="inputjogo" placeholder="Digite o jogo...">
@@ -149,8 +149,8 @@
   </body>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/js/cria-div.js"></script>
-  <script type="text/javascript" src="/Users/Maqui/OneDrive/Documentos/DAW I/SiteCurriculo/js/rolagem.js"></script>
+  <script type="text/javascript" src="/js/cria-div.js"></script>
+  <script type="text/javascript" src="/js/rolagem.js"></script>
 
   
 </html>
